check out ui done.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.0
+  flutter_riverpod: ^0.12.4
   http: ^0.12.2
 
 dev_dependencies:
